test_regress/t/t_sequence_sexpr_unsup.out
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:26:4: Unsupported: sequence
   26 |    sequence s_a;
      |    ^~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:29:4: Unsupported: sequence
   29 |    sequence s_var;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:34:4: Unsupported: sequence
   34 |    sequence s_within;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:35:9: Unsupported: within (in sequence expression)
   35 |       a within(b);
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:38:4: Unsupported: sequence
   38 |    sequence s_and;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:39:9: Unsupported: and (in sequence expression)
   39 |       a and b;
      |         ^~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:42:4: Unsupported: sequence
   42 |    sequence s_or;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:43:9: Unsupported: or (in sequence expression)
   43 |       a or b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:46:4: Unsupported: sequence
   46 |    sequence s_throughout;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:47:9: Unsupported: throughout (in sequence expression)
   47 |       a throughout b;
      |         ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:50:4: Unsupported: sequence
   50 |    sequence s_intersect;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:51:9: Unsupported: intersect (in sequence expression)
   51 |       a intersect b;
      |         ^~~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:54:4: Unsupported: sequence
   54 |    sequence s_uni_cycdelay_int;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:55:7: Unsupported: ## () cycle delay range expression
   55 |       ## 1 b;
      |       ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:55:12: Unsupported: ## (in sequence expression)
   55 |       ## 1 b;
      |            ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:57:4: Unsupported: sequence
   57 |    sequence s_uni_cycdelay_id;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:58:7: Unsupported: ## id cycle delay range expression
   58 |       ## DELAY b;
      |       ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:58:16: Unsupported: ## (in sequence expression)
   58 |       ## DELAY b;
      |                ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:60:4: Unsupported: sequence
   60 |    sequence s_uni_cycdelay_pid;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:61:7: Unsupported: ## () cycle delay range expression
   61 |       ## ( DELAY ) b;
      |       ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:61:20: Unsupported: ## (in sequence expression)
   61 |       ## ( DELAY ) b;
      |                    ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:63:4: Unsupported: sequence
   63 |    sequence s_uni_cycdelay_range;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:64:7: Unsupported: ## range cycle delay range expression
   64 |       ## [1:2] b;
      |       ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:64:16: Unsupported: ## (in sequence expression)
   64 |       ## [1:2] b;
      |                ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:66:4: Unsupported: sequence
   66 |    sequence s_uni_cycdelay_star;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:67:7: Unsupported: ## [*] cycle delay range expression
   67 |       ## [*] b;
      |       ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:67:14: Unsupported: ## (in sequence expression)
   67 |       ## [*] b;
      |              ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:69:4: Unsupported: sequence
   69 |    sequence s_uni_cycdelay_plus;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:70:7: Unsupported: ## [+] cycle delay range expression
   70 |       ## [+] b;
      |       ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:70:14: Unsupported: ## (in sequence expression)
   70 |       ## [+] b;
      |              ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:73:4: Unsupported: sequence
   73 |    sequence s_cycdelay_int;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:74:9: Unsupported: ## () cycle delay range expression
   74 |       a ## 1 b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:74:12: Unsupported: ## (in sequence expression)
   74 |       a ## 1 b;
      |            ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:76:4: Unsupported: sequence
   76 |    sequence s_cycdelay_id;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:77:9: Unsupported: ## id cycle delay range expression
   77 |       a ## DELAY b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:77:9: Unsupported: ## (in sequence expression)
   77 |       a ## DELAY b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:79:4: Unsupported: sequence
   79 |    sequence s_cycdelay_pid;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:80:9: Unsupported: ## () cycle delay range expression
   80 |       a ## ( DELAY ) b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:80:14: Unsupported: ## (in sequence expression)
   80 |       a ## ( DELAY ) b;
      |              ^~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:82:4: Unsupported: sequence
   82 |    sequence s_cycdelay_range;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:83:9: Unsupported: ## range cycle delay range expression
   83 |       a ## [1:2] b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:83:9: Unsupported: ## (in sequence expression)
   83 |       a ## [1:2] b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:85:4: Unsupported: sequence
   85 |    sequence s_cycdelay_star;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:86:9: Unsupported: ## [*] cycle delay range expression
   86 |       a ## [*] b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:86:9: Unsupported: ## (in sequence expression)
   86 |       a ## [*] b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:88:4: Unsupported: sequence
   88 |    sequence s_cycdelay_plus;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:89:9: Unsupported: ## [+] cycle delay range expression
   89 |       a ## [+] b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:89:9: Unsupported: ## (in sequence expression)
   89 |       a ## [+] b;
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:92:4: Unsupported: sequence
   92 |    sequence s_booleanabbrev_brastar_int;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:93:9: Unsupported: [*] boolean abbrev expression
   93 |       a [* 1 ];
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:93:12: Unsupported: boolean abbrev (in sequence expression)
   93 |       a [* 1 ];
      |            ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:95:4: Unsupported: sequence
   95 |    sequence s_booleanabbrev_brastar;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:96:9: Unsupported: [*] boolean abbrev expression
   96 |       a [*];
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:96:9: Unsupported: boolean abbrev (in sequence expression)
   96 |       a [*];
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:98:4: Unsupported: sequence
   98 |    sequence s_booleanabbrev_plus;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:99:9: Unsupported: [+] boolean abbrev expression
   99 |       a [+];
      |         ^~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:99:9: Unsupported: boolean abbrev (in sequence expression)
   99 |       a [+];
      |         ^~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:101:4: Unsupported: sequence
  101 |    sequence s_booleanabbrev_eq;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:102:9: Unsupported: [= boolean abbrev expression
  102 |       a [= 1];
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:102:12: Unsupported: boolean abbrev (in sequence expression)
  102 |       a [= 1];
      |            ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:104:4: Unsupported: sequence
  104 |    sequence s_booleanabbrev_eq_range;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:105:9: Unsupported: [= boolean abbrev expression
  105 |       a [= 1:2];
      |         ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:105:12: Unsupported: boolean abbrev (in sequence expression)
  105 |       a [= 1:2];
      |            ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:107:4: Unsupported: sequence
  107 |    sequence s_booleanabbrev_minusgt;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:108:9: Unsupported: [-> boolean abbrev expression
  108 |       a [-> 1];
      |         ^~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:108:13: Unsupported: boolean abbrev (in sequence expression)
  108 |       a [-> 1];
      |             ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:110:4: Unsupported: sequence
  110 |    sequence s_booleanabbrev_minusgt_range;
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:111:9: Unsupported: [-> boolean abbrev expression
  111 |       a [-> 1:2];
      |         ^~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:111:13: Unsupported: boolean abbrev (in sequence expression)
  111 |       a [-> 1:2];
      |             ^
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:114:4: Unsupported: sequence
  114 |    sequence p_arg_seqence(sequence inseq);
      |    ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:114:27: Unsupported: sequence argument data type
  114 |    sequence p_arg_seqence(sequence inseq);
      |                           ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:118:10: Unsupported: cover sequence
  118 |    cover sequence (s_a) $display("");
      |          ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:119:10: Unsupported: cover sequence
  119 |    cover sequence (@(posedge a) disable iff (b) s_a) $display("");
      |          ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:120:10: Unsupported: cover sequence
  120 |    cover sequence (disable iff (b) s_a) $display("");
      |          ^~~~~~~~
%Error: Exiting due to
